--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
       “We combine traditional iron craftsmanship
       with modern technology to bring your custom designs to life.”
     </blockquote>
+
+    <a href="ar.html" class="btn">Try AR Preview</a>
+
   </section>
 
   <!-- ABOUT -->
