--- a/public/ar.html
+++ b/public/ar.html
@@ -66,7 +66,7 @@
 
     document.write(`
       <a-scene
-        mindar-image="imageTargetSrc: markers/targets.mind;"
+        mindar-image="imageTargetSrc: markers/dots.mind;"
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: true">
 
